# legicash-facts

./: .dockerignore  .gitignore  .gitlab-ci.yml  META  Makefile  README.md  alacris.opam  bibliography.md  demo.md  design-notes.md  design.md  dsl.md  invariants.md  legicash.install  legicash.opam  mkb.md  persistence.md
config/: demo-keys-big.json  demo-keys-small.json  ethereum_config.json  facilitator_keys.json  mkb_config.json  side_chain_client_config.json  side_chain_server_config.json
contracts/: bonds.sol  claims.sol  claimtypes.sol  court.sol  deposit-withdraw.sol  ethereum-blocks.sol  facilitator-fallback.sol  facilitator.sol  hello.sol  operator-fallback.sol  operator.sol
docker/: README.md  docker-compose.yml
endpoints/: Makefile.options  README  README.legicash  endpoints.eliom
scripts/: CreateNewConfigFile  Dockerfile  balances.sh  deposit-test.py  deposit.sh  deposit150ether.sh  fund.sh  install-mac-dependencies.sh  install-ocaml-lens.sh  install-secp256k1.sh  install-tezos.sh  locustfile.py  mini_integration_test.sh  mk-opam-install.sh  ocamlformat-dotfile  pay.sh  pre-commit  run-curl-integration-tests.sh  secp256k1-keygen.sh  test_deposit_1_deposit10ether.sh  test_payment_2_payment10ether.sh  test_payment_2_payment12ether.sh  test_sequence_1_deposits.sh  test_withdraw_1_deposit50ether.sh  withdraw.sh  (+2 more)
src/: action.ml  action.mli  base.ml  base.mli  court_registry.ml  court_registry.mli  crypto.ml  crypto.mli  data256.ml  data256.mli  db.ml  db.mli  db_types.ml  db_types.mli  dune  ethereum_abi.ml  ethereum_json_rpc.ml  ethereum_json_rpc.mli  ethereum_patricia_merkle.ml  ethereum_rlp.ml  ethereum_rlp.mli  ethereum_transaction.ml  ethereum_transaction.mli  ethereum_util.ml  ethereum_util.mli  facilitator_contract.ml  facilitator_contract.mli  flows.ml  flows.mli  hello_legicash.ml  hex.ml  hex.mli  integer.ml  integer.mli  jbuild  key256.ml  key256.mli  keypair.ml  keypair.mli  keypairs.ml  (+39 more)
src/alacris_client/: accounts.ml  accounts.mli  actions.ml  actions.mli  demo_keys.mli  dune  endpoints.md  side_chain_client.ml  side_chain_client_stress_test.ml  side_chain_client_test.ml
src/alacris_client/nginx/: start.sh  stop.sh
src/alacris_client/nginx/conf/: nginx.conf  scgi.conf
src/alacris_client/nginx/logs/: DUMMY
src/alacris_contract/: dune  setup_contract.ml
src/alacris_lib/: check_claims.ml  court_registry.ml  demon.ml  dune  ethereum_action.ml  ethereum_action.mli  facilitator_contract.ml  facilitator_contract.mli  get_ip_address.ml  mkb_json_rpc.ml  operator_contract.ml  operator_contract.mli  setup_contract.ml  setup_operator_contral.ml  side_chain.ml  side_chain.mli  side_chain_action.ml  side_chain_action.mli  side_chain_client.ml  side_chain_client.mli  side_chain_facilitator.ml  side_chain_facilitator.mli  side_chain_null_operation.ml  side_chain_operator.ml  side_chain_operator.mli  side_chain_server.ml  side_chain_server.mli  side_chain_server_config.ml  side_chain_tag.ml  side_chain_tag.mli  side_chain_user.ml  side_chain_user.mli  side_chain_vigilantism.ml  state_update.ml
src/endpoints/: .depend  Makefile  Makefile.options  README  README.legicash  accounts.eliom  accounts.ml  accounts.mli  actions.eliom  actions.ml  actions.mli  api_scgi.ml  demo_keys.ml  demo_keys.mli  dune  endpoints.conf.in  endpoints.eliom  endpoints.md  endpoints.ml  endpoints_test.ml  side_chain_client.ml  side_chain_client_test.ml
src/endpoints/local/etc/endpoints/: endpoints-test.conf
src/endpoints/local/lib/endpoints/: endpoints.cma  endpoints.cmxa  endpoints.cmxs
src/endpoints/local/var/www/endpoints/eliom/: endpoints.js
src/endpoints/nginx/: start.sh  stop.sh
src/endpoints/nginx/conf/: nginx.conf  scgi.conf
src/legicash_lib/: court_registry.mli  dune  facilitator_contract.ml  facilitator_contract.mli  legibase.ml  legibase.mli  main_chain_action.ml  main_chain_action.mli  side_chain.ml  side_chain.mli  side_chain_action.ml  side_chain_action.mli  side_chain_client.ml  side_chain_client.mli  side_chain_facilitator.ml  side_chain_facilitator.mli  side_chain_server.ml  side_chain_user.ml  side_chain_user.mli
src/legilogic_ethereum/: assembly.ml  batch.ml  batch.mli  contract_config.ml  contract_config.mli  dune  ethereum_abi.ml  ethereum_action.ml  ethereum_action.mli  ethereum_chain.ml  ethereum_chain.mli  ethereum_config.ml  ethereum_config.mli  ethereum_json_rpc.ml  ethereum_json_rpc.mli  ethereum_patricia_merkle.ml  ethereum_prefunder.ml  ethereum_rlp.ml  ethereum_rlp.mli  ethereum_transaction.ml  ethereum_transaction.mli  ethereum_user.ml  ethereum_user.mli  ethereum_util.ml  ethereum_util.mli  ethereum_watch.ml  ethereum_watch.mli  main_chain.ml  main_chain.mli  mkb_json_rpc.ml  posting.ml  posting.mli  side_chain_server_config.ml  test_contract.sol  test_txpool_content.ml
src/legilogic_lib/: action.ml  action.mli  config.ml  config.mli  crypto.mli  db.ml  db.mli  digesting.ml  digesting.mli  dune  get_ip_address.ml  hex.ml  hex.mli  integer.ml  integer.mli  json_rpc.ml  json_rpc.mli  keypair.mli  legilogic_lib_test.ml  lib.ml  lib.mli  logging.ml  logging.mli  marshaling.ml  marshaling.mli  merkle_trie.ml  merkle_trie.mli  mkb_json_rpc.ml  persisting.ml  persisting.mli  signing.ml  signing.mli  tag.ml  tag.mli  trie.ml  trie.mli  types.ml  types.mli  yojsoning.ml  yojsoning.mli
src/post_transaction/: README.md  dune  posting.ml  posting.mli
src/ppx_deriving_rlp/: README.md  dune-project  dune-workspace.dev  ppx_deriving_rlp.opam
src/ppx_deriving_rlp/src/: dune  ppx_deriving_rlp.ml  ppx_deriving_rlp_core.ml  ppx_deriving_rlp_runtime.ml  ppx_deriving_rlp_runtime.mli  ppx_deriving_rlp_runtime_core.ml  ppx_deriving_rlp_runtime_core.mli  rlp-encoding.txt  rlp.ml  rlp.mli  rlp_decode.ml  rlp_decode.mli  rlp_encode.ml  rlp_encode.mli  rlping.mli
src/ppx_deriving_rlp/test/: dune  invalidRLPTest.json  invalid_rlptest_json.ml  ppx_deriving_rlp_alias_adt.ml  ppx_deriving_rlp_alias_adt.mli  ppx_deriving_rlp_test.ml  ppx_deriving_rlp_test_data.ml  ppx_deriving_rlp_test_data.mli  rlp_encode_test.ml  rlptest_json.ml  rlptest_util.ml
(+52 files in other folders)
