;; dune file for Legicash sources

;; See https://github.com/ocaml/dune/issues/515 .
;; Note that that example includes a `release` stanza. We may want to copy parts
;; of this to a `release` stanza later.
(env
 (dev
  (flags (:standard
          -g  ;; Add debugging info when compiling / linking

          ;; Disable warnings.
          ;; -9 : Don't check that all fields in a pattern are mentioned
          ;; -34 : unused type
          -w -9-34

          ;; Fail on these warnings
          ;; -27 : unused variable
          ;; -32 : unused value
          ;; -33 : unused open
          -warn-error -27-32-33))
  (ocamlc_flags (:standard -thread -I +threads))
  (ocamlopt_flags (:standard
                   ; -p  ;; Enable profiling
                   -thread -I +threads))
  ))

(library
 (name legicash_top)
 (modules
  version)
 (preprocess (pps ppx_deriving.std ppx_deriving_yojson ppx_inline_test lens.ppx_deriving lwt_ppx))
 (libraries legilogic_lib legilogic_ethereum legicash_lib)
 (inline_tests
    ; (flags (:standard -verbose))
    ))

;; custom toplevel
(executable
 (name legicaml)
 (modules legicaml)
 (libraries  compiler-libs.toplevel legicash_top legilogic_lib legilogic_ethereum legicash_lib)
 (link_flags -linkall -cclib -lintegers -I +threads)
 (modes byte))
