;; Alacris side chain client

(env (dev (flags (:standard -w -39))))  ;; Unused rec flag

(library
 (name side_chain_client_lib)
 (modules actions)
 (preprocess (pps ppx_deriving.std ppx_deriving_yojson ppx_inline_test lens.ppx_deriving lwt_ppx ppx_deriving_rlp))
 (libraries alacris_lib integers lwt lwt.unix ppx_deriving_yojson.runtime secp256k1 yojson))

(executable
 (name side_chain_client)
 (modules side_chain_client)
 (preprocess (pps ppx_deriving.std ppx_deriving_yojson ppx_inline_test lens.ppx_deriving lwt_ppx ppx_deriving_rlp))
 (libraries cryptokit cstruct leveldb ppx_deriving_yojson.runtime alacris_lib side_chain_client_lib str scgi unix))

(executable
 (name side_chain_client_test)
 (modules side_chain_client_test)
 (preprocess (pps ppx_deriving.std ppx_deriving_yojson ppx_inline_test lens.ppx_deriving lwt_ppx ppx_deriving_rlp))
 (libraries cohttp cohttp-lwt-unix side_chain_client_lib ppx_deriving_yojson.runtime legilogic_lib lwt))
