;; dune file for Alacris sources
;; TODO: rename side_chain_* to alacris_*
;; TODO: make alacris_lib the code common to client and server only (mostly type definitions),
;; and move client and server code to their respective directories.
;;  court_registry

(env (dev (flags (:standard -w -39))))  ;; Unused rec flag

(library
 (name alacris_lib)
 (modules
  operator_contract operator_contract_binary
  side_chain_tag side_chain side_chain_client side_chain_operator side_chain_user side_chain_action state_update)
 (preprocess (pps ppx_deriving.std ppx_deriving_yojson ppx_inline_test lens.ppx_deriving lwt_ppx))
 ;; -9 : all fields mentioned in a pattern
 ;; -27 : unused variable
 ;; -32 : unused value
 ;; -34 : unused type
 (libraries legilogic_lib legilogic_ethereum cohttp cohttp-lwt-unix cryptokit cstruct integers lens leveldb lwt ppx_deriving_yojson.runtime secp256k1 threads yojson)
 (inline_tests))

(executable
 (name side_chain_server)
 (modules side_chain_server)
 (preprocess (pps ppx_deriving.std ppx_deriving_yojson ppx_inline_test lens.ppx_deriving lwt_ppx))
 (libraries legilogic_lib alacris_lib ppx_deriving_yojson.runtime yojson))

