;; dune file for Legicash endpoints demo

(env (dev (flags (:standard -w -39))))  ;; Unused rec flag

(library
 (name endpoints)
 (modules accounts actions)
 (preprocess (pps ppx_deriving.std ppx_deriving_yojson lwt_ppx))
 (libraries legicash_lib integers lwt lwt.unix ppx_deriving_yojson.runtime secp256k1 yojson))

(executable
  (name api_scgi)
  (modules api_scgi)
  (preprocess (pps ppx_deriving.std ppx_inline_test ppx_deriving_yojson))
  (libraries cryptokit cstruct leveldb ppx_deriving_yojson.runtime legicash_lib endpoints str scgi unix))

(executable
 (name endpoints_test)
 (modules endpoints_test)
 (preprocess (pps ppx_deriving.std ppx_deriving_yojson lwt_ppx))
 (libraries cohttp cohttp-lwt-unix endpoints ppx_deriving_yojson.runtime legilogic_lib lwt))
