;; TODO: once made nice and clean, move this module to its own repository legilogic_lib

(library
 (name legilogic_lib)
 (modules
  lib action hex logging
  yojsoning marshaling integer tag digesting signing db persisting types
  trie merkle_trie)
 (preprocess (pps ppx_deriving.std ppx_deriving_yojson ppx_inline_test lens.ppx_deriving lwt_ppx))
 ;; -9 : all fields mentioned in a pattern
 ;; -27 : unused variable
 ;; -32 : unused value
 ;; -34 : unused type
 (ocamlc_flags (:standard -g -w -9-34 -warn-error -27-32-33 -thread -I +threads))
 (ocamlopt_flags (:standard -p -g -w -9-34 -warn-error -27-32-33 -thread -I +threads))
 (libraries cryptokit cstruct integers lens leveldb lwt lwt.unix ppx_deriving_yojson.runtime secp256k1 threads yojson)
 (inline_tests))
