;; TODO: once made nice and clean, move this module to its own repository legilogic_lib

(library
 (name legilogic_lib)
 (modules
  lib action config hex logging yojsoning json_rpc
  marshaling integer tag digesting db persisting types signing
  trie merkle_trie)
 (preprocess (pps ppx_deriving.std ppx_deriving_yojson ppx_inline_test lens.ppx_deriving lwt_ppx))
 (libraries cohttp cohttp-lwt-unix cryptokit cstruct integers lens leveldb lwt lwt.unix ppx_deriving_yojson.runtime secp256k1 threads yojson qcheck)
 (inline_tests))
