opam-version: "2.0.2"
maintainer: "Alex Knauth <alexknauth@legilogic.com>"
authors: [ "Alex Knauth <alexknauth@legilogic.com>" ]
tags: [ "syntax" "rlp" ]
depends: [
  "ocaml" {>= "4.07.1"}
  "ppx_deriving" {>= "4.2.1"}
]
synopsis:
  "RLP marshalling and unmarshalling for OCaml ADTs"
description: """
ppx_deriving_rlp is a preprocessor plugin that allows you
to place `[@@deriving rlp]` annotations onto type
definitions, to automatically generate `to_rlp_item` and
`of_rlp_item` functions for that type.
"""
