(library
 (name ppx_deriving_rlp_runtime_core)
 (public_name ppx_deriving_rlp.runtime_core)
 (synopsis "Core runtime components of [@@deriving rlp]")
 (modules rlp rlping rlp_encode rlp_decode ppx_deriving_rlp_runtime_core)
 (libraries ppx_deriving ppx_deriving.runtime zarith result)
 (preprocess (pps ppx_deriving ppx_deriving.show)))

(library
 (name ppx_deriving_rlp_runtime)
 (public_name ppx_deriving_rlp.runtime)
 (synopsis "Runtime components of [@@deriving rlp]")
 (modules ppx_deriving_rlp_runtime)
 (libraries ppx_deriving ppx_deriving.runtime ppx_deriving_rlp_runtime_core zarith result)
 (preprocess (pps ppx_deriving ppx_deriving.show ppx_deriving_rlp_core)))

(library
 (name ppx_deriving_rlp_core)
 (public_name ppx_deriving_rlp.core)
 (synopsis "[@@deriving rlp]")
 (libraries ppx_deriving ppx_deriving.api
            ppx_deriving_rlp_runtime_core)
 (ppx_runtime_libraries ppx_deriving_rlp_runtime_core)
 (modules ppx_deriving_rlp_core)
 (kind ppx_deriver)
 (flags (:standard -w -9)))

(library
 (name ppx_deriving_rlp)
 (public_name ppx_deriving_rlp)
 (synopsis "[@@deriving rlp]")
 (libraries ppx_deriving ppx_deriving.api
            ppx_deriving_rlp_runtime_core
            ppx_deriving_rlp_core)
 (ppx_runtime_libraries ppx_deriving_rlp_runtime_core ppx_deriving_rlp_runtime)
 (modules ppx_deriving_rlp)
 (kind ppx_deriver)
 (flags (:standard -w -9)))
